SERVER-38764 External sorter should use 64-bit integers for file offsets